--- a/english.html
+++ b/english.html
@@ -10,6 +10,7 @@
         color: #266431;
         font-weight: 700;
         padding: 10px 0;
+        line-height: 1.2;
       }
 
       details summary {
